--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 node_modules/
 .vscode/
 .clasp.json
+experiment/
+pnpm-lock.yamlexperiment/
+pnpm-lock.yaml
+
 # macOS debris
 .DS_Store
-experiment/
-pnpm-lock.yaml
