Build very simple sidebar with add-on card system when user clicks on add-on icon

--- a/appsscript.json
+++ b/appsscript.json
@@ -2,7 +2,10 @@
   "addOns": {
     "common": {
       "name": "AWS Pricing by Strake™",
-      "logoUrl": "https://cdn.x.macroscope.io/assets/aws-pricing/logo.png"
+      "logoUrl": "https://cdn.x.macroscope.io/assets/aws-pricing/logo.png",
+      "homepageTrigger": {
+        "runFunction": "buildSideBar"
+      }
     },
     "sheets": {}
   },
